crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__statements__for_loop_5.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/statements.rs
assertion_line: 68
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    int bar;\n    void Get(int foo) {}\n}\n\nint main() {\n    Foo foo;\n    for (int i = 1; --i >= 0;) {\n        foo.Get(1);\n             |\n             ^\n    }\n    foo.Get(1);\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 8,
        "character": 12
      },
      "end": {
        "line": 8,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 24
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 9
      },
      "end": {
        "line": 2,
        "character": 12
      }
    }
  }
]
